feat: add api-doc for /api/me
